# QT_client_server

build-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  client.ilk  cmake_install.cmake
build-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/client_autogen/: deps
build-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/client_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d  moc_model.cpp  moc_model.cpp.d
build-client-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/client_autogen/include/: ui_mainwindow.h
build-server-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/: .ninja_deps  .ninja_log  Blocks.db  CMakeCache.txt  build.ninja  cmake_install.cmake  server.ilk
build-server-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/.qtc_clangd/: compile_commands.json
build-server-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/db_xml/: 1.1.1.1.xml  1.1.1.2.xml
build-server-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/server_autogen/: deps
build-server-Desktop_Qt_5_15_2_MSVC2019_64bit-Debug/server_autogen/EWIEGA46WW/: moc_database.cpp  moc_database.cpp.d  moc_server.cpp  moc_server.cpp.d
client/: BlockModel.h  BoardModel.h  CMakeLists.txt  PortModel.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  model.cpp  model.h  parser.cpp  parser.h  treeitem.cpp  treeitem.h
server/: BlockModel.h  BoardModel.h  CMakeLists.txt  PortModel.h  database.cpp  database.h  server.cpp  server.h  xmlparser.cpp  xmlparser.h
server/db_xml/: 1.1.1.2.xml
(+965 files in other folders)
